--- a/Practica2_Visualizacion.Rmd
+++ b/Practica2_Visualizacion.Rmd
@@ -343,7 +343,16 @@ En esta sección vamos a utilizar **ggplot2** para representar distribuciones de
 * Almacena en formato **pdf** el gráfico resultante en un fichero denominado ``Ejercicio6.pdf``.
 
 ```{r Solucion ejercicio 6}
-
+load("./data/weatherAUS_distributions.RData")
+ggplot(data = ds)+
+  geom_boxplot(aes(x=Year,y = MinTemp))
+violin = ggplot(data = ds, aes(fill = Year))+
+  geom_violin(aes(x=Year,y = MaxTemp))+
+  labs(title = "Distribución de temperaturas máximas por año",y="Temperatura (ºC)",x = "Año")
+#Lo coloreamos para en el ejercicio siguiente quitar la leyenda
+violin
+violin + theme(axis.text.x = element_text(angle = 45),legend.position = "none")
+ggsave("./figure/Ejercicio6.pdf",height = 5, width = 5)
 ```
 
 ## Histogramas con **ggplot2**
